[gd_scene load_steps=2 format=3 uid="uid://b5x3q4n7m8vwj"]

[ext_resource type="Script" path="res://src/ui/floating_window.gd" id="1_window"]

[node name="FloatingWindow" type="PanelContainer"]
custom_minimum_size = Vector2(300, 200)
script = ExtResource("1_window")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleBar" type="Panel" parent="VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox/TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleLabel" type="Label" parent="VBox/TitleBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Window Title"

[node name="CloseButton" type="Button" parent="VBox/TitleBar/HBox"]
layout_mode = 2
text = "X"

[node name="ContentContainer" type="MarginContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8